--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 
 <!--        +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 
-        <dependency>
+       <!-- <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
@@ -101,19 +101,19 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-        <!--  https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa  -->
+        &lt;!&ndash;  https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa  &ndash;&gt;
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>2.7.18</version>
         </dependency>
-        <!--  https://mvnrepository.com/artifact/com.mysql/mysql-connector-j  -->
+        &lt;!&ndash;  https://mvnrepository.com/artifact/com.mysql/mysql-connector-j  &ndash;&gt;
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.3.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+        &lt;!&ndash; https://mvnrepository.com/artifact/org.hibernate/hibernate-core &ndash;&gt;
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -121,12 +121,12 @@
         </dependency>
 
 
-        <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+        &lt;!&ndash; https://mvnrepository.com/artifact/org.modelmapper/modelmapper &ndash;&gt;
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>3.2.0</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
